fixed overflow: hidden (y) error

--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,8 @@
   transform: scale(1);
   border: 0px solid green;
   border-radius: 20px;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y:  scroll;
   transition: transform .2s;
   cursor: pointer;
 }
